--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Redirecting to https://stackoverflow.com/story/akashennn</title>
+<title>Akash Perera - Full Stack Engineer</title>
+<description>Experienced Full Stack Engineer with a demonstrated history of working in the software industry. Skilled in Next.js, React Native, and Golang.</description>
 <meta http-equiv="refresh" content="0; URL=https://stackoverflow.com/story/akashennn">
 <link rel="canonical" href="https://stackoverflow.com/story/akashennn">
