--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>Akash Perera - Full Stack Engineer</title>
-<description>Experienced Full Stack Engineer with a demonstrated history of working in the software industry. Skilled in Next.js, React Native, and Golang.</description>
+<meta name="description" content="Experienced Full Stack Engineer with a demonstrated history of working in the software industry. Skilled in Next.js, React Native, and Golang.">
+<meta name="keywords" content="Akash,Perera,Akash Perera,akashennn">
 <meta http-equiv="refresh" content="0; URL=https://stackoverflow.com/story/akashennn">
+<title>Akash Perera - Full Stack Engineer</title>
 <link rel="canonical" href="https://stackoverflow.com/story/akashennn">
